--- a/menuhin/templates/admin/menuhin/menu/change_form.html
+++ b/menuhin/templates/admin/menuhin/menu/change_form.html
@@ -14,3 +14,58 @@
         </fieldset>
     {% endif %}
 {% endblock %}
+
+
+{% block extrastyle %}{{ block.super }}
+<style type="text/css">
+.menu-as-a-list .ancestor > a:after {
+    content: " ({% trans "Ancestor" %})";
+}
+{#.menu-as-a-list .norelationship > a:after {#}
+{#    content: " ({% trans "..." %})";#}
+{#}#}
+.menu-as-a-list .selected > a:after {
+    content: " ({% trans "Selected" %})";
+}
+.menu-as-a-list .descendant > a:after {
+    content: " ({% trans "Descendant" %})";
+}
+.menu-as-a-list li a:after {
+    content: " ({% trans "No relationship" %})";
+}
+
+
+.menu-as-a-list .ancestor a {
+    color: #888;
+    font-style: italic;
+}
+
+.menu-as-a-list .selected a {
+    color: black;
+    font-style: normal;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.menu-as-a-list .descendant a {
+    color: #888;
+    text-transform: none;
+    font-weight: normal;
+}
+
+.menu-as-a-list .norelationship a {
+    font-style: normal;
+    color: #DDD;
+}
+
+.menu-as-a-list li a {
+    color: #BBB;
+    font-style: normal;
+    text-transform: none;
+}
+
+.menu-as-a-list a:hover {
+    text-decoration: underline;
+}
+</style>
+{% endblock %}
