--- a/menuhin/templates/menuhin/show_menu.html
+++ b/menuhin/templates/menuhin/show_menu.html
@@ -1,12 +1,12 @@
 {% spaceless %}
 {% for node, node_metadata in menu_nodes %}
     {% if node_metadata.open %}
-        <ul class="menu-new-depth menu-depth-{{ node_metadata.level }}">
-        <li class="menu-item menu-item-depth-{{ node_metadata.level }}">
+        <ul class="menu-new-level menu-level-{{ node_metadata.level }}" data-depth="{{ node.get_depth }}">
     {% else %}
-        </li><li class="menu-item menu-item-depth-{{ node_metadata.level }}">
+        </li>
     {% endif %}
-    <a href="{{ node.get_absolute_url }}" class="menu-link menu-link-depth-{{ node_metadata.level }}">{{ node.title }}</a>
+    <li class="menu-item menu-item-level-{{ node_metadata.level }}{% if node.is_left %} menu-item-leaf{% endif %}{% if node.is_root %} menu-item-root{% endif %}" data-depth="{{ node.get_depth }}" data-created="{{ node.created|date:'c' }}">
+    <a href="{{ node.get_absolute_url }}" class="menu-link menu-link-level-{{ node_metadata.level }}">{{ node.title }}</a>
     {% for close in node_metadata.close %}
         </li></ul>
     {% endfor %}
