provide more useful info in the template.

--- a/menuhin/templates/menuhin/show_breadcrumbs.html
+++ b/menuhin/templates/menuhin/show_breadcrumbs.html
@@ -1,12 +1,12 @@
 {% if ancestor_nodes %}
 <ol class="breadcrumbs">
     {% for ancestor in ancestor_nodes %}
-        <li class="breadcrumbs-ancestor {% if forloop.first %}breadcrumbs-first{% endif %}">
+        <li class="breadcrumbs-ancestor{% if forloop.first %} breadcrumbs-first{% endif %}{% if ancestor.is_leaf %} breadcrumbs-leaf{% endif %}{% if ancestor.is_root %} breadcrumbs-root{% endif %}" data-depth="{{ ancestor.get_depth }}" data-created="{{ ancestor.created|date:'c' }}">
         <a href="{{ ancestor.get_absolute_url }}" class="breadcrumbs-ancestor-link">{{ ancestor.title }}</a>
         </li>
     {% endfor %}
     {% if menu_node %}
-        <li class="breadcrumbs-self breadcrumbs-last">
+        <li class="breadcrumbs-self breadcrumbs-last" data-depth="{{ menu_node.get_depth }}" data-created="{{ menu_node.created|date:'c' }}">
         <a href="{{ menu_node.get_absolute_url }}" class="breadcrumbs-self-link">{{ menu_node.title }}</a>
         </li>
     {% endif %}
