--- a/menuhin/templates/menuhin/show_menu.html
+++ b/menuhin/templates/menuhin/show_menu.html
@@ -5,7 +5,7 @@
     {% else %}
         </li>
     {% endif %}
-    <li class="menu-item menu-item-level-{{ node_metadata.level }}{% if node.is_left %} menu-item-leaf{% endif %}{% if node.is_root %} menu-item-root{% endif %}" data-depth="{{ node.get_depth }}" data-created="{{ node.created|date:'c' }}">
+    <li class="menu-item menu-item-level-{{ node_metadata.level }}{% if node.is_leaf %} menu-item-leaf{% endif %}{% if node.is_root %} menu-item-root{% endif %}" data-depth="{{ node.get_depth }}" data-created="{{ node.created|date:'c' }}">
     <a href="{{ node.get_absolute_url }}" class="menu-link menu-link-level-{{ node_metadata.level }}">{{ node.title }}</a>
     {% for close in node_metadata.close %}
         </li></ul>
