--- a/menuhin/templates/admin/menuhin/menuitem/import_form.html
+++ b/menuhin/templates/admin/menuhin/menuitem/import_form.html
@@ -15,6 +15,19 @@
 </style>
 {% endblock %}
 
+
+{% if not is_popup %}
+{% block breadcrumbs %}
+<div class="breadcrumbs">
+<a href="{% url 'admin:index' %}">{% trans 'Home' %}</a>
+&rsaquo; <a href="{% url 'admin:app_list' app_label=opts.app_label %}">{{ app_label|capfirst|escape }}</a>
+&rsaquo; <a href="{% url opts|admin_urlname:'changelist' %}">{{ opts.verbose_name_plural|capfirst }}</a>
+&rsaquo; {{ title }}
+</div>
+{% endblock %}
+{% endif %}
+
+
 {% block content %}
 <div id="content-main">
 {% url opts|admin_urlname:'import' as form_url %}
