--- a/menuhin/templates/menuhin/show_menu.html
+++ b/menuhin/templates/menuhin/show_menu.html
@@ -6,7 +6,7 @@
     {% else %}
         </li>
     {% endif %}
-    <li class="menu-item menu-item-level-{{ node_metadata.level }}{% for css in classes %} menu-item-{{ css }}{% endfor %}" data-depth="{{ node.get_depth }}" data-created="{{ node.created|date:'c' }}">
+    <li class="menu-item menu-item-level-{{ node_metadata.level }}{% for css in node.css_classes %} menu-item-{{ css }}{% endfor %}" data-depth="{{ node.get_depth }}" data-created="{{ node.created|date:'c' }}">
     <a href="{{ node.get_absolute_url }}" class="menu-link menu-link-level-{{ node_metadata.level }}{% if node.is_active %} menu-link-selected{% endif %}{% if node.vary_on_user %} menu-link-varies{% endif %}">{% parse_title node %}</a>
     {% for close in node_metadata.close %}
         </li></ul>
