--- a/menuhin/templates/menuhin/show_breadcrumbs.html
+++ b/menuhin/templates/menuhin/show_breadcrumbs.html
@@ -1,14 +1,14 @@
 {% if ancestor_nodes %}
 {% load menus %}
-<ol class="breadcrumbs">
+<ol class="breadcrumbs" itemscope itemtype="http://schema.org/Breadcrumb">
     {% for ancestor in ancestor_nodes %}
         <li class="breadcrumbs-ancestor{% if forloop.first %} breadcrumbs-first{% endif %}{% if ancestor.is_leaf %} breadcrumbs-leaf{% endif %}{% if ancestor.is_root %} breadcrumbs-root{% endif %}" data-depth="{{ ancestor.get_depth }}" data-created="{{ ancestor.created|date:'c' }}">
-        <a href="{{ ancestor.get_absolute_url }}" class="breadcrumbs-ancestor-link">{% if ancestor.title_needs_parsing %}{% parse_title ancestor %}{% else %}{{ ancestor.title }}{% endif %}</a>
+        <a href="{{ ancestor.get_absolute_url }}" class="breadcrumbs-ancestor-link" itemprop="url"><span class="breadcrumbs-ancestor-value" itemprop="title">{% if ancestor.title_needs_parsing %}{% parse_title ancestor %}{% else %}{{ ancestor.title }}{% endif %}</span></a>
         </li>
     {% endfor %}
     {% if menu_node %}
         <li class="breadcrumbs-self breadcrumbs-last{% if menu_node.is_active %} breadcrumb-selected{% endif %}" data-depth="{{ menu_node.get_depth }}" data-created="{{ menu_node.created|date:'c' }}">
-        <a href="{{ menu_node.get_absolute_url }}" class="breadcrumbs-self-link">{% if menu_node.title_needs_parsing %}{% parse_title menu_node %}{% else %}{{ menu_node.title }}{% endif %}</a>
+        <a href="{{ menu_node.get_absolute_url }}" class="breadcrumbs-self-link" itemprop="url"><span class="breadcrumbs-self-value" itemprop="title">{% if menu_node.title_needs_parsing %}{% parse_title menu_node %}{% else %}{{ menu_node.title }}{% endif %}</span></a>
         </li>
     {% endif %}
 </ol>
