--- a/menuhin/templates/menuhin/show_menu.html
+++ b/menuhin/templates/menuhin/show_menu.html
@@ -1,14 +1,20 @@
-{% spaceless %}
-{% for node, node_metadata in menu_nodes %}
-    {% if node_metadata.open %}
-        <ul class="{% if forloop.first %}menu-root {% endif %}menu-new-level menu-level-{{ node_metadata.level }}" data-depth="{{ node.get_depth }}">
-    {% else %}
-        </li>
-    {% endif %}
-    <li class="menu-item menu-item-level-{{ node_metadata.level }}{% for css in node.css_classes %} menu-item-{{ css }}{% endfor %}" data-depth="{{ node.get_depth }}" data-created="{{ node.created|date:'c' }}">
-    <a href="{{ node.get_absolute_url }}" class="menu-link menu-link-level-{{ node_metadata.level }}{% if node.is_active %} menu-link-selected{% endif %}{% if node.vary_on_user %} menu-link-varies{% endif %}"{% if node.is_root %} rel="home"{% endif %}>{{ node.title }}</a>
-    {% for close in node_metadata.close %}
-        </li></ul>
+{% load sniplates %}
+
+{% block menu %}
+<ul class="menu-nodes" data-count="{{ menu_nodes|length }}">
+    {% for menu_node in menu_nodes %}
+    {% reuse "menuitem" %}
     {% endfor %}
-{% endfor %}
-{% endspaceless %}
+</ul>
+{% endblock menu %}
+
+{% block menuitem %}
+{% if menu_node %}
+<li>
+<a data-id="{{ menu_node.pk }}" href="{{ menu_node.uri }}">{{ menu_node.title }}</a>
+{% if menu_node.children %}
+1{% reuse "menu" lol=1 menu_nodes=menu_node.children %}2
+{% endif %}
+</li>
+{% endif %}
+{% endblock menuitem %}
